--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=product
+server.port=8083
+
+# Config DB
+spring.datasource.url=jdbc:postgresql://localhost:5433/products
+spring.datasource.username=postgres
+spring.datasource.password=1234
+
+# ConfigHibernate
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# Config Eureka Discovery Client
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+#eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+#eureka.client.register-with-eureka=true
+#eureka.client.fetch-registry=true
