--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,1 +1,28 @@
 spring.application.name=api-gateway
+server.port=8767
+
+# Configuración Eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+
+#eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+
+
+# Config Gateway
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.loadbalancer.ribbon.enabled=false
+
+spring.cloud.gateway.routes[0].id=user
+spring.cloud.gateway.routes[0].uri=lb://USER
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/users/**
+
+spring.cloud.gateway.routes[1].id=product
+spring.cloud.gateway.routes[1].uri=lb://PRODUCT
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/products/**
+
+spring.cloud.gateway.routes[2].id=order
+spring.cloud.gateway.routes[2].uri=lb://ORDER
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/v1/orders/**
