--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=order
 server.port=8082
 
 # Config DB
-spring.datasource.url=jdbc:postgresql://localhost:5432/orders
+spring.datasource.url=jdbc:postgresql://localhost:5434/orders
 spring.datasource.username=postgres
 spring.datasource.password=1234
 
@@ -10,7 +10,7 @@ spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=create-drop
 
 # Config Eureka Discovery Client
-#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-#eureka.instance.instance-id=${spring.application.name}:${random.uuid}
-#eureka.client.register-with-eureka=true
-#eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
