--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 #Configs
 spring.application.name=user
-server.port=8084
+server.port=8080
 spring.jpa.hibernate.ddl-auto = create-drop
 
 #Config DB
-spring.datasource.url=jdbc:postgresql://localhost:5434/users
+spring.datasource.url=jdbc:postgresql://localhost:5432/users
 spring.datasource.username=postgres
 spring.datasource.password=1234
 
-# Config Eureka Client
-#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-#eureka.instance.instance-id=${spring.application.name}:${random.uuid}
-#eureka.client.register-with-eureka=true
-#eureka.client.fetch-registry=true
+# Config Eureka Discovery Client
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
