--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -1,12 +1,9 @@
+spring.cloud.config.profile=dev
+
 spring.application.name=product
 server.port=8081
 
 # Config DB
 spring.datasource.url=jdbc:postgresql://localhost:5433/products
-spring.datasource.username=postgres
-spring.datasource.password=1234
-
-# ConfigHibernate
-spring.jpa.hibernate.ddl-auto=create-drop
 
 # Config Eureka Discovery Client
