--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -1,16 +1,4 @@
 spring.application.name=order
+spring.cloud.config.profile=dev
 server.port=8082
-
-# Config DB
 spring.datasource.url=jdbc:postgresql://localhost:5434/orders
-spring.datasource.username=postgres
-spring.datasource.password=1234
-
-# ConfigHibernate
-spring.jpa.hibernate.ddl-auto=create-drop
-
-# Config Eureka Discovery Client
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.instance.instance-id=${spring.application.name}:${random.uuid}
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
