--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,15 +1,11 @@
 spring.application.name=api-gateway
 server.port=8767
 
-# Configuración Eureka
+# Config Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-
-
-#eureka.instance.instance-id=${spring.application.name}:${random.uuid}
-
 
 # Config Gateway
 spring.cloud.gateway.discovery.locator.enabled=true
