--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -22,3 +22,11 @@ spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/products/**
 spring.cloud.gateway.routes[2].id=order
 spring.cloud.gateway.routes[2].uri=lb://ORDER
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/v1/orders/**
+
+# Config security
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:9090/realms/mycompany-microservice-realm
+spring.security.oauth2.client.registration.spring-cloud-gateway-client.client-id=spring-cloud-gateway-client
+spring.security.oauth2.client.registration.spring-cloud-gateway-client.client-secret=9xhp3JvlZeic3eo9OIexybdcKgskq2C9
+spring.security.oauth2.client.registration.spring-cloud-gateway-client.provider=keycloak
+spring.security.oauth2.client.registration.spring-cloud-gateway-client.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.spring-cloud-gateway-client.redirect-uri=http://localhost:8080/login/oauth2/code/spring-cloud-gateway-client
