--- a/user/src/main/resources/bootstrap.properties
+++ b/user/src/main/resources/bootstrap.properties
@@ -1,1 +1,3 @@
 spring.cloud.config.uri=http://localhost:8888
+#configuración
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9090/realms/mycompany-microservice-realm
