--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -22,3 +22,15 @@ spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/products/**
 spring.cloud.gateway.routes[2].id=order
 spring.cloud.gateway.routes[2].uri=lb://ORDER
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/v1/orders/**
+
+spring.cloud.gateway.default-filters[0]=SaveSession
+spring.cloud.gateway.default-filters[1]=TokenRelay
+
+#Keycloak
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:9090/realms/microservices-realm
+spring.security.oauth2.client.registration.keycloak.provider=keycloak
+spring.security.oauth2.client.registration.keycloak.scope=openid
+spring.security.oauth2.client.registration.keycloak.client-id=spring-cloud-gateway-client
+spring.security.oauth2.client.registration.keycloak.client-secret=P0o0vD0k44lWkEM8Xy9XlqINt4To1iDq
+spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.keycloak.redirect-uri={baseUrl}/login/oauth2/code/keycloak
