--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.cloud.config.profile=dev
 spring.application.name=product
 server.port=8081
 spring.datasource.url=jdbc:postgresql://localhost:5433/products
+
+#keycloak
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:9090/realms/microservices-realm/protocol/openid-connect/certs
