--- a/api-gateway/build.gradle
+++ b/api-gateway/build.gradle
@@ -25,8 +25,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'org.springframework.boot:spring-boot-starter-security' //
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client' //
+    implementation 'org.springframework.boot:spring-boot-starter-actuator' //
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
+    testImplementation 'org.springframework.security:spring-security-test' //
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
@@ -35,7 +39,7 @@ dependencyManagement {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
     }
 }
-
+// actuator y oauth2 resource server
 tasks.named('test') {
     useJUnitPlatform()
 }
