--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.cloud.config.profile=dev
 spring.application.name=user
 server.port=8080
 spring.datasource.url=jdbc:postgresql://localhost:5432/users
+
+#keycloak
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:9090/realms/microservices-realm/protocol/openid-connect/certs
