--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -33,4 +33,4 @@ spring.security.oauth2.client.registration.keycloak.scope=openid
 spring.security.oauth2.client.registration.keycloak.client-id=spring-cloud-gateway-client
 spring.security.oauth2.client.registration.keycloak.client-secret=P0o0vD0k44lWkEM8Xy9XlqINt4To1iDq
 spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.keycloak.redirect-uri={baseUrl}/login/oauth2/code/keycloak
+spring.security.oauth2.client.registration.keycloak.redirect-uri=http://localhost:8767/*
