--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=user
 server.port=8080
 spring.datasource.url=jdbc:postgresql://localhost:5432/users
 
-
-#keycloak
+#Keycloak
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:9090/realms/microservices-realm/protocol/openid-connect/certs
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9090/realms/microservices-realm
+
